Fixed overflow porblems in messaging service

--- a/web/Web-Content/message.css
+++ b/web/Web-Content/message.css
@@ -35,6 +35,8 @@ and open the template in the editor.
     border-top-width: 2px;
     border-top-style: solid;
     border-top-color: #dddddd;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .scroll{
